--- a/css/screen.css
+++ b/css/screen.css
@@ -669,7 +669,7 @@ a:focus {
     bottom: 0;
     left: 0;
     background-color: #202024;
-    transition: opacity 1.25s ease;
+    transition: opacity .25s ease;
 }
 
 .has-mobile-nav .c-mobile-nav__bg {
@@ -683,7 +683,7 @@ a:focus {
     width: 100vw;
     background-color: #fff;
     transform: translateX(-100%);
-    transition: transform 1.25 ease;
+    transition: transform .25s ease;
 }
 
 .has-mobile-nav .c-mobile-nav__body {
@@ -693,7 +693,7 @@ a:focus {
 
 .c-page {
     transform: translateX(0%);
-    transition: transform 1.25 ease;
+    transition: transform .25s ease;
 }
 
 .has-mobile-nav .c-page {
